# point-sandbox

./: Makefile  README.md  emscripten_module_initializer.ts  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
public/: index.html
types/emscripten_module/: index.d.ts
types/emscripten_point/: index.d.ts
types/emscripten_point.wasm/: index.d.ts
wasm/: CMakeLists.txt
wasm/src/: point_main.cpp
